--- a/Portfolio-WebsiteV2.0/src/index.css
+++ b/Portfolio-WebsiteV2.0/src/index.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Catamaran:wght@400;500;600;700;800;900&family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); */
 
 * {
   padding: none;
@@ -17,6 +17,11 @@
 }
 
 a {
-  color : #fff;
-  font-family: 'Poppins', sans-serif;
+  color : #f4f4f4;
 }
+
+/* @layer base {
+  a {
+    font-family: 'Catamaran', sans-serif;
+  }
+} */
