--- a/Portfolio-WebsiteV2.0/src/index.css
+++ b/Portfolio-WebsiteV2.0/src/index.css
@@ -13,7 +13,8 @@
 
 .header {
   height : 110px;
-  background-color: #4e44ab;;
+  background-color: #4e44ab;
+  /* background-color: #2c3c85; */
 }
 
 a {
