--- a/Portfolio-WebsiteV2.0/src/index.css
+++ b/Portfolio-WebsiteV2.0/src/index.css
@@ -11,10 +11,19 @@
   scroll-behavior: smooth;
 }
 
+body {
+  background-color: #f4f4f4;
+  /* background-color: #f4f4f4; */
+}
+
 .header {
-  height : 110px;
+  height : 100px;
   background-color: #4e44ab;
   /* background-color: #2c3c85; */
+}
+
+.bg-blue {
+  background-color: #4e44ab;
 }
 
 a {
@@ -24,6 +33,27 @@ a {
 .hero-text {
   text-shadow: 2px 2px 8px #111;
 }
+
+::-webkit-scrollbar {
+  width: 4px;
+  height: 5px;
+  background-color: #f4f4f4;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #acacac;
+  border-radius: 10px;
+  height: 200px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #fb923c;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
 
 /* @layer base {
   a {
