--- a/Portfolio-WebsiteV2.0/src/index.css
+++ b/Portfolio-WebsiteV2.0/src/index.css
@@ -12,9 +12,9 @@
 }
 
 body {
-  background-color: #f4f4f4;
-  /* background-color: #1f1a4d; */
   /* background-color: #f4f4f4; */
+  background-color: #4e44ab;
+  /* background-color: #1f1a4d; */
 }
 
 .header {
