--- a/Portfolio-WebsiteV2.0/src/index.css
+++ b/Portfolio-WebsiteV2.0/src/index.css
@@ -13,14 +13,18 @@
 
 body {
   /* background-color: #f4f4f4; */
-  background-color: #4e44ab;
+  /* background-color: #4e44ab; */
   /* background-color: #1f1a4d; */
+  background-color: #1f1a4d;
 }
 
 .header {
   height : 100px;
+  /* border-bottom-left-radius: 10px ;
+  border-bottom-right-radius: 5px ; */
   background-color: #4e44ab;
   /* background-color: #2c3c85; */
+  /* background-color: #1f1a4d; */
 }
 
 .blue-space {
