--- a/Portfolio-WebsiteV2.0/src/index.css
+++ b/Portfolio-WebsiteV2.0/src/index.css
@@ -22,7 +22,8 @@ body {
   height : 100px;
   /* border-bottom-left-radius: 10px ;
   border-bottom-right-radius: 5px ; */
-  background-color: #4e44ab;
+  /* background-color: #4e44ab; */
+  background-color: #2d2672;
   /* background-color: #2c3c85; */
   /* background-color: #1f1a4d; */
 }
