--- a/Portfolio-WebsiteV2.0/src/index.css
+++ b/Portfolio-WebsiteV2.0/src/index.css
@@ -18,6 +18,11 @@ body {
   background-color: #1f1a4d;
 }
 
+.viewBox {
+  transition: all 500ms;
+  background-color: #2d2672;
+}
+
 .header {
   height : 100px;
   /* border-bottom-left-radius: 10px ;
