--- a/Portfolio-WebsiteV2.0/src/index.css
+++ b/Portfolio-WebsiteV2.0/src/index.css
@@ -29,6 +29,7 @@ body {
   border-bottom-right-radius: 5px ; */
   /* background-color: #4e44ab; */
   background-color: #2d2672;
+  z-index: 100;
   /* background-color: #2c3c85; */
   /* background-color: #1f1a4d; */
 }
