made some changes

--- a/Portfolio-WebsiteV2.0/src/index.css
+++ b/Portfolio-WebsiteV2.0/src/index.css
@@ -35,6 +35,11 @@ body {
   /* background-color: #1f1a4d; */
 }
 
+.heroImage {
+  background-image: url('./assets/BG-Polygon.png');
+  object-fit: cover;
+}
+
 .padding-top {
   padding-top: 120px;
 }
