updated few more details

--- a/Portfolio-WebsiteV2.0/src/index.css
+++ b/Portfolio-WebsiteV2.0/src/index.css
@@ -36,7 +36,7 @@ body {
 }
 
 .heroImage {
-  background-image: url('./assets/BG-Polygon.png');
+  background-image: url('./assets/BG-Polyygon-1.png');
   object-fit: cover;
 }
 
